# TranscriptAI

backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260604_0001_initial_schema.py  20260604_0002_enable_rls.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  dependencies.py  logging.py  security.py
backend/app/db/: database.py  schema.sql  supabase.py
backend/app/models/: __init__.py  audio_file.py  base.py  enums.py  export.py  profile.py  transcript.py  transcript_segment.py  user_settings.py
backend/app/repositories/: audio_file_repository.py  export_repository.py  profile_repository.py  settings_repository.py  transcript_repository.py
backend/app/schemas/: auth.py  common.py  dashboard.py  export.py  profile.py  settings.py  transcript.py  upload.py  websocket.py
backend/app/services/: auth_service.py  dashboard_service.py  export_service.py  settings_service.py  speaker_diarization_service.py  storage_service.py  transcript_service.py  transcription_dispatcher.py  upload_service.py  user_service.py  websocket_service.py  whisper_service.py
backend/app/websocket/: __init__.py
backend/app/workers/: celery_worker.py  cleanup_tasks.py  export_tasks.py  (+2 more)
backend/tests/: conftest.py  test_export_service.py  test_health_and_auth.py  test_settings.py  test_speaker_diarization_service.py  test_transcription_dispatcher.py  test_transcripts.py  test_uploads.py  test_websocket.py
(+78 files in other folders)
