[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribeai-backend"
version = "0.1.0"
description = "Production FastAPI backend for the TranscribeAI speech-to-text SaaS platform."
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.2",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.1.3",
  "python-multipart>=0.0.9",
  "faster-whisper>=1.0.3",
  "av>=13.0.0",
  "numpy>=1.26.0,<3.0.0",
  "celery[redis]>=5.4.0",
  "redis>=5.0.8",
  "loguru>=0.7.2",
  "supabase>=2.7.1",
  "httpx>=0.27.0",
  "email-validator>=2.2.0",
  "mutagen>=1.47.0",
  "reportlab>=4.2.2",
  "python-docx>=1.1.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "anyio>=4.4.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]
